--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.img-post{
+  width: 300px;
+  height: 200px;
+}
+.card{
+  width: 300px;
+  height: 400px;
+}
