--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,12 @@ code {
   height: 400px;
   box-shadow: 2px 2px 3px black;
 }
+.notFound{
+   width: 100%;
+   height: 600px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: black;
+   color: white;
+}
